@startuml

title __DEMO's Class Diagram__\n

  namespace  {
    namespace om.example.demo {
      class com.example.demo.HelloApplication {
      }
    }
  }
  

  namespace  {
    namespace om.example.demo {
      class com.example.demo.HelloController {
      }
    }
  }
  

  namespace  {
    namespace odel {
      class model.ActionChain {
      }
    }
  }
  

  namespace  {
    namespace odel {
      abstract class model.Handler {
      }
    }
  }
  

  namespace  {
    namespace odel {
      class model.NegativeHandler {
      }
    }
  }
  

  namespace  {
    namespace odel {
      class model.Player {
      }
    }
  }
  

  namespace  {
    namespace odel {
      class model.PositiveHandler {
      }
    }
  }
  

  com.example.demo.HelloApplication -up-|> javafx.application.Application
  com.example.demo.HelloController .up.|> javafx.fxml.Initializable
  com.example.demo.HelloController o-- model.Player : player1
  com.example.demo.HelloController o-- model.ActionChain : action
  model.ActionChain o-- model.Handler : chain
  model.ActionChain o-- model.Player : player
  model.Handler o-- model.Handler : processor
  model.NegativeHandler -up-|> model.Handler
  model.NegativeHandler o-- model.Player : player
  model.PositiveHandler -up-|> model.Handler
  model.PositiveHandler o-- model.Player : player


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
